unpackaged/objects/Housing__c.object
<CustomObject>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hallway__c</fullName>
        <label>Hallway</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Housings</relationshipLabel>
        <relationshipName>Housings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Housing</label>
    <nameField>
        <label>Collage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Housings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>